snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3-all.jar.md5
cf33a2046f322fa2f43ab623c66fb232